--- a/color-clock/package.json
+++ b/color-clock/package.json
@@ -14,5 +14,8 @@
     "npm"
   ],
   "author": "janaZr9",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "moment": "^2.29.1"
+  }
 }
